--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "ts",
   "version": "1.0.0",
   "description": "Learning typescript using deno runtime.",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "start": "nodemon src/index.ts",
-    "build": "sucrase ./src -d ./build --transforms typescript.imports",
+    "start": "nodemon src/main.ts",
+    "build": "sucrase ./src -d ./build --transforms typescript,imports",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,6 +21,10 @@
   "homepage": "https://github.com/codeYann/ts#readme",
   "devDependencies": {
     "@types/node": "^17.0.23",
+    "@typescript-eslint/eslint-plugin": "^5.16.0",
+    "@typescript-eslint/parser": "^5.16.0",
+    "eslint": "^8.11.0",
+    "eslint-config-google": "^0.14.0",
     "nodemon": "^2.0.15",
     "sucrase": "^3.20.3"
   }
