--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "compileOnSave": true,
   "compilerOptions": {
     "strict": true,
     "allowJs": true,
@@ -11,9 +12,8 @@
     "forceConsistentCasingInFileNames": true,
     "sourceMap": true,
     "moduleResolution": "Node",
-    "removeComments": true
+    "removeComments": true,
+    "noImplicitAny": true
   },
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules", "./build"]
 }
